--- a/appSettings.json
+++ b/appSettings.json
@@ -1,8 +1,7 @@
 {
   "userConfig": {
     "username": "abc@gmail.com",
-    "pwd": "abc@12",
-
+    "pwd": "abc@12"
   },
   "slot": {
     "ageGroup": 18,
