AWS SNS service

--- a/appSettings.json
+++ b/appSettings.json
@@ -1,10 +1,29 @@
 {
   "userConfig": {
-    "username": "abc@gmail.com",
-    "pwd": "abc@12"
+    "username": "jio@gmail.com",
+    "pwd": "jio@12"
   },
-  "slot": {
-    "ageGroup": 18,
-    "dose": 2
-  }
+  "slot": [
+    {
+      "ageGroup": 18,
+      "dose": 2,
+      "DistrictName": "Pune",
+      "DistrictCode": 363,
+      "mobiles": "+919373865733"
+    },
+    {
+      "ageGroup": 18,
+      "dose": 1,
+      "DistrictName": "Solapur",
+      "DistrictCode": 375,
+      "to": ""
+    },
+    {
+      "ageGroup": 18,
+      "dose": 1,
+      "DistrictName": "Mumbai",
+      "DistrictCode": 395,
+      "to": ""
+    }
+  ]
 }
