reset to default

--- a/appSettings.json
+++ b/appSettings.json
@@ -6,10 +6,10 @@
   "slot": [
     {
       "ageGroup": 18,
-      "dose": 2,
+      "dose": 1,
       "DistrictName": "Pune",
       "DistrictCode": 363,
-      "mobiles": "+919373865733"
+      "mobiles": "+"
     },
     {
       "ageGroup": 18,
